fix: left align mobile first

--- a/app/javascript/layouts/Layout.scss
+++ b/app/javascript/layouts/Layout.scss
@@ -45,7 +45,10 @@
 }
 
 .feedback-link {
-  text-align: right;
+  text-align: left;
+  @media (min-width: theme("screens.md")) {
+    text-align: right;
+  }
 }
 
 .feedback-link a:focus {
